<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>
    <string name="weather_app_key" translatable="false">c726c8d46cb22ec8179bff4f960fa80c</string>
    <string name="base_url" translatable="false">https://api.openweathermap.org/data/2.5/weather</string>
    <string name="error_parsing">JSON parsing error</string>
    <string name="error_connection">Server didn\'t respond or bad request. Have no records in cache with current settings. Connect to the internet or change parameters and try again.</string>
    <string name="language_code">en</string>
    <string name="units_code" translatable="false">metric</string>
    <string name="degree_symbol" translatable="false">°</string>
    <string name="celsium" translatable="false">C</string>
    <string name="temp_label">Current temp</string>
    <string name="humidity_label">Humidity</string>
    <string name="not_available">n/a</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="wind_label">Wind speed</string>
    <string name="speed_units_metersph">m/s</string>
    <string name="speed_units_milesph">mph</string>
    <string name="pending_state">pending</string>
    <string name="pressure_label">Atmo pressure</string>
    <string name="pressure_units">mmHg</string>
    <string name="no_connection">Server is unreachable</string>
    <string name="title_activity_main">Weather</string>
    <string name="metric_label" translatable="false">°C</string>
    <string name="imperial_label" translatable="false">°F</string>
    <string name="standart_label" translatable="false">K</string>
    <string name="units_label">Units</string>
    <string name="method_predefined">Use predefined</string>
    <string name="method_enter">Enter below</string>
    <string name="enter_city_label">Enter city here</string>
    <string name="make_request">Make request</string>
    <string name="error_message_label">Error</string>
    <string name="request_date_label">Request date</string>
    <string name="add_button_label">Add</string>
    <string name="read_button_label">Log records</string>
    <string name="remove_button_label">Wipe DB</string>
    <string name="check_logs">Check logs</string>
    <string name="open_db">Open DB</string>
    <string name="inserted_at">Record inserted. ID=</string>
    <string name="all_fields_required">All fields need to be not empty</string>
    <string-array name="cities" translatable="false">
        <item>Amsterdam</item>
        <item>Bremen</item>
        <item>Moscow</item>
        <item>Omsk</item>
        <item>Saint Petersburg</item>
    </string-array>
    <string name="records_count_label">Records in DB:</string>
    <string name="title_activity_dbrecords">DBRecordsActivity</string>
    <string name="cachedLabel">Using cached values</string>
    <string name="cached_date">Cached </string>
    <string name="how_many_records">Records in DB: </string>
    <string name="how_many_records_deleted">Records deleted: </string>
</resources>