<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dip"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/tlGridTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/table_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/th_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city" />

                    <TextView
                        android:id="@+id/th_request_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_date_label" />

                    <TextView
                        android:id="@+id/th_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_label" />

                    <TextView
                        android:id="@+id/th_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/th_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_label" />

                    <TextView
                        android:id="@+id/th_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_label" />

                    <TextView
                        android:id="@+id/th_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure_label" />

                    <TextView
                        android:id="@+id/th_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_label" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>