<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/main_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="vertical"
        android:orientation="vertical"
        android:showDividers="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/citylabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/city"
            android:textSize="24sp"
            tools:layout_editor_absoluteY="324dp" />

        <RadioGroup
            android:id="@+id/mode_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/mode_predef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onModeGroupClick"
                android:text="@string/method_predefined" />

            <RadioButton
                android:id="@+id/mode_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onModeGroupClick"
                android:text="@string/method_enter" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_city_label"
            android:inputType="text" />

        <LinearLayout
            android:id="@+id/units_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/unitsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/units_label"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_celsium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onUnitsGroupClick"
                    android:text="@string/metric_label" />

                <RadioButton
                    android:id="@+id/radio_farenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onUnitsGroupClick"
                    android:text="@string/imperial_label" />

                <RadioButton
                    android:id="@+id/radio_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onUnitsGroupClick"
                    android:text="@string/standart_label" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/make_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:foregroundTint="?attr/colorPrimary"
            android:foregroundTintMode="screen"
            android:gravity="center"
            android:onClick="onMakeRequestClick"
            android:text="@string/make_request"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="408dp" />

        <ToggleButton
            android:id="@+id/tb_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/open_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openDBActivity"
            android:text="@string/open_db" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_root" />

</android.support.constraint.ConstraintLayout>