<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:clickable="true"
    android:onClick="onClick"
    tools:context=".WeatherActivity"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/weather_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cached_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/cachedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cachedLabel" />

            <TextView
                android:id="@+id/cachedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cached_date" />
        </LinearLayout>

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="3"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/city"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/weather_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:backgroundTint="?attr/colorAccent"
            android:backgroundTintMode="screen"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/temp_label" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/not_available"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weather_other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/humidity_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_label" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical|end"
                    android:text="@string/not_available" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wind_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wind_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_label" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical|end"
                    android:text="@string/not_available" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pressure_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/pressure_label" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:text="@string/not_available" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>